comment: write contains() list vs set 빅오